tests/snapshots/render_snapshots__basic_human_agent.snap
---
source: tests/render_snapshots.rs
expression: rendered
---
source: claude
target: codex
session_id: abc123
cwd: /Users/noob/Projects/example
transcript: /Users/noob/.claude/sessions/abc123.jsonl
created_at: 2026-05-14T22:40:00+05:30

human:
Can you inspect the auth flow?

agent:
I will trace the auth path end to end.

human:
Thanks — start with the login handler.

agent:
Reading src/auth/login.rs now.
