tests/snapshots/render_snapshots__tool_call_small_output.snap
---
source: tests/render_snapshots.rs
expression: rendered
---
source: claude
target: codex
session_id: abc123
cwd: /Users/noob/Projects/example
transcript: /Users/noob/.claude/sessions/abc123.jsonl
created_at: 2026-05-14T22:40:00+05:30

human:
List repo files.

tool:
name: Bash
input:
ls src

output:
auth.rs
main.rs
render.rs


agent:
Three files in src.
